--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Workspace</title>
-    <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
-    <script defer src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
+    <!-- <script defer src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         * {
             font-family: "Roboto", sans-serif;
@@ -352,15 +354,15 @@
     <div class="container-fluid bg-white chatWindow_position ps-0" id="chatBox">
         <header>
             <!-- <div> -->
-                <svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                    <g fill="none" fill-rule="evenodd">
-                        <circle fill="#4284F4" cx="24" cy="24" r="24"></circle>
-                        <path d="M12 12h24v24H12z"></path>
-                        <path
-                            d="M32 14H16c-1.1 0-1.99.9-1.99 2L14 34l4-4h14c1.1 0 2-.9 2-2V16c0-1.1-.9-2-2-2zm0 14H16V16h16v12zm-14-4h8v2h-8v-2zm0-3h12v2H18v-2zm0-3h12v2H18v-2z"
-                            fill="#FFF" fill-rule="nonzero"></path>
-                    </g>
-                </svg>
+            <svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                <g fill="none" fill-rule="evenodd">
+                    <circle fill="#4284F4" cx="24" cy="24" r="24"></circle>
+                    <path d="M12 12h24v24H12z"></path>
+                    <path
+                        d="M32 14H16c-1.1 0-1.99.9-1.99 2L14 34l4-4h14c1.1 0 2-.9 2-2V16c0-1.1-.9-2-2-2zm0 14H16V16h16v12zm-14-4h8v2h-8v-2zm0-3h12v2H18v-2zm0-3h12v2H18v-2z"
+                        fill="#FFF" fill-rule="nonzero"></path>
+                </g>
+            </svg>
             <!-- </div> -->
             <div class="icon-close float-end mt-2 me-3" onclick="toggle_chat()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="24" viewBox="0 0 24 24">
@@ -384,6 +386,9 @@
         </svg>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 <script>
     const expandAll = () => {
         let expandEvents = document.getElementsByClassName("accordion-item");
