--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>Google Workspace</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Google+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <style>
@@ -97,7 +97,7 @@
     }
 
     .admin {
-      margin-left: 8rem;
+      margin-left: 7rem;
       font-weight: 500;
       /* letter-spacing: 0.8px; */
       font-family: 'Google Sans', Arial, sans-serif;
@@ -108,7 +108,7 @@
       color: #5f6368;
       letter-spacing: 0.25px;
       font-size: 14px;
-      font-weight: 400;
+      /* font-weight: 400; */
       font-family: "Google Sans", Roboto, Arial, Helvetica, sans-serif;
     }
 
@@ -304,13 +304,38 @@
 
     @media screen and (max-width:980px) {
       #banner_custom {
-        background-color: orangered;
         flex-wrap: wrap;
         flex-direction: column;
+        padding-left: 0;
       }
 
-      #banner_custom #custom_left-banner {
-        flex: 100;
+      #custom_left_banner {
+        width: 100% !important;
+      }
+
+      #custom_banner{
+        align-items: center !important;
+      }
+
+      .products{
+        justify-content: center !important;
+        align-items: center;
+      }
+
+      .title{
+        font-size: 48px;
+        text-align: center;
+        line-height: 58px;
+        width: 103%;
+      }
+      
+      .text{
+        font-size: 16px;
+        text-align: center;
+        width: 100%;
+      }
+
+      .box{
         width: 100%;
       }
     }
@@ -349,10 +374,10 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid d-flex flex-row mt-4 pt-2" id="banner_custom">
-    <div class="container-fluid bg-white pe-0" id="custom_left_banner">
+  <div class="container-fluid d-flex mt-4 pt-2" id="banner_custom">
+    <div class="container-fluid bg-white pe-0 me-0" id="custom_left_banner">
       <div class="container-fluid d-flex justify-content-center align-items-center h-100 pe-0">
-        <div class="container d-flex flex-column justify-content-center align-items-start pe-0">
+        <div class="container d-flex flex-column justify-content-center align-items-start pe-0" id="custom_banner">
           <div class="products container w-100 d-flex flex-row justify-content-start align-items-center mb-4 ps-1">
             <img class="product-image me-3" src="https://www.gstatic.com/images/branding/product/2x/hh_gmail_32dp.png"
               alt="" />
@@ -481,31 +506,33 @@
       </div>
     </div>
     <div class="col-lg-4 col-sm-12">
-      <div class="card w-100">
-        <div class="card w-100 h-100">
-          <div class="card-body pt-4 pb-4 pe-4 ps-4">
-            <strong class="card-title">Explore Learning Centre</strong>
-            <p class="card-text fw-lighter">
-              Browse tips, guides and how-to videos made for both new users
-              and power users.
-            </p>
-            <button class="btn btn-outline-secondary me-2">
-              Contact Sales
-            </button>
+      <div class="row">
+        <div class="mt-3 col-lg-12 col-md-6 col-sm-12">
+          <div class="card w-100 h-100">
+            <div class="card-body pt-4 pb-4 pe-4 ps-4">
+              <strong class="card-title">Explore Learning Centre</strong>
+              <p class="card-text fw-lighter">
+                Browse tips, guides and how-to videos made for both new users
+                and power users.
+              </p>
+              <button class="btn btn-outline-secondary me-2">
+                Contact Sales
+              </button>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card w-100 mt-3 col-md-6">
-        <div class="card w-100 h-100">
-          <div class="card-body pt-4 pb-4 pe-4 ps-4">
-            <strong class="card-title">Get admin help</strong>
-            <p class="card-text fw-lighter">
-              Sign in to find specific answers, manage users or get support as
-              a developer.
-            </p>
-            <button class="btn btn-outline-secondary me-2">
-              Get Support
-            </button>
+        <div class="mt-3 col-lg-12 col-md-6 col-sm-12">
+          <div class="card w-100 h-100">
+            <div class="card-body pt-4 pb-4 pe-4 ps-4">
+              <strong class="card-title">Get admin help</strong>
+              <p class="card-text fw-lighter">
+                Sign in to find specific answers, manage users or get support as
+                a developer.
+              </p>
+              <button class="btn btn-outline-secondary me-2">
+                Get Support
+              </button>
+            </div>
           </div>
         </div>
       </div>
