--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
   <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -78,6 +78,7 @@
       font-weight: 500;
       letter-spacing: 0;
       font-family: 'Google Sans', Arial, sans-serif;
+      min-width: 151px;
     }
 
     #custom_button_contact {
@@ -90,6 +91,7 @@
       font-weight: 500;
       letter-spacing: 0;
       font-family: 'Google Sans', Arial, sans-serif;
+      min-width: 150px;
     }
 
     .custom_button_contact:hover {
@@ -97,11 +99,17 @@
     }
 
     .admin {
-      margin-left: 7rem;
       font-weight: 500;
-      /* letter-spacing: 0.8px; */
       font-family: 'Google Sans', Arial, sans-serif;
       font-size: 14px;
+    }
+
+    #custom_nav_button_bar {
+      width: 35%;
+    }
+
+    #navbarNavAltMarkup {
+      gap: 20px;
     }
 
     #nav_custom_item {
@@ -114,6 +122,10 @@
 
     #nav_custom_item:hover {
       color: black;
+    }
+
+    .custom_responsive_nav {
+      display: none;
     }
 
     #video {
@@ -313,38 +325,65 @@
         width: 100% !important;
       }
 
-      #custom_banner{
+      #custom_banner {
         align-items: center !important;
       }
 
-      .products{
+      .products {
         justify-content: center !important;
         align-items: center;
       }
 
-      .title{
+      .title {
         font-size: 48px;
         text-align: center;
         line-height: 58px;
         width: 103%;
       }
-      
-      .text{
+
+      .text {
         font-size: 16px;
         text-align: center;
         width: 100%;
       }
 
-      .box{
+      .box {
         width: 100%;
       }
+    }
+
+
+    @media screen and (max-width:1155px) and (min-width: 992px) {
+      .custom_responsive_nav {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+      }
+
+      #custom_remove-nav {
+        /* visibility: hidden; */
+        display: none !important;
+      }
+
+      #responive_button_bar{
+        display: flex !important;
+        align-items: center;
+        justify-content: space-between !important;
+        /* gap: 50%; */
+        /* width: 100% !important; */
+      }
+      
+
+      /* .custom_nav_button_bar{
+        width: 100%;
+      } */
     }
   </style>
 </head>
 
 <body class="mb-4">
-  <nav class="navbar navbar-expand-lg sticky_nav">
-    <div class="container-fluid pe-2">
+  <nav class="navbar navbar-expand-lg d-flex flex-column sticky_nav bg-white">
+    <div class="container-fluid pe-2" id="responive_button_bar">
       <div class="navbar-nav ms-3">
         <img src="./Google_Workspace.svg" alt="" height="25" width="200" title="this is logo" />
       </div>
@@ -352,8 +391,8 @@
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse d-lg-flex justify-content-between" id="navbarNavAltMarkup">
-        <div class="navbar-nav d-flex align-items-center ms-3">
+      <div class="collapse navbar-collapse d-lg-flex" id="navbarNavAltMarkup">
+        <div class="navbar-nav d-flex align-items-center justify-content-between ms-3 w-75" id="custom_remove-nav">
           <div class="nav-item d-flex justify-content-between">
             <a class="nav-item px-3 text-decoration-none" id="nav_custom_item">Solutions</a>
             <a class="nav-item px-3 text-decoration-none" id="nav_custom_item">Products</a>
@@ -365,7 +404,7 @@
             <a class="nav-link admin p-0">Admin console</a>
           </div>
         </div>
-        <div class="navbar-nav d-flex align-items-center">
+        <div class="navbar-nav d-flex align-items-center" id="custom_nav_button_bar">
           <button class="btn btn-outline-secondary me-3" id="custom_button_contact">
             Contact sales
           </button>
@@ -373,8 +412,23 @@
         </div>
       </div>
     </div>
+    <div class="custom_responsive_nav bg-white pt-4 pb-4">
+      <div class="navbar-nav d-flex align-items-center justify-content-between ms-3 me-5 w-100">
+        <div class="nav-item d-flex justify-content-between">
+          <a class="nav-item px-3 text-decoration-none" id="nav_custom_item">Solutions</a>
+          <a class="nav-item px-3 text-decoration-none" id="nav_custom_item">Products</a>
+          <a class="nav-item px-3 text-decoration-none" id="nav_custom_item">Industries</a>
+          <a class="nav-item px-3 text-decoration-none" id="nav_custom_item">Pricing</a>
+          <a class="nav-item px-3 text-decoration-none" id="nav_custom_item">Resources</a>
+        </div>
+        <div class="nav-item">
+          <a class="nav-link admin p-0">Admin console</a>
+        </div>
+      </div>
+    </div>
+    </div>
   </nav>
-  <div class="container-fluid d-flex mt-4 pt-2" id="banner_custom">
+  <div class="container-fluid d-flex mt-5 pt-2" id="banner_custom">
     <div class="container-fluid bg-white pe-0 me-0" id="custom_left_banner">
       <div class="container-fluid d-flex justify-content-center align-items-center h-100 pe-0">
         <div class="container d-flex flex-column justify-content-center align-items-start pe-0" id="custom_banner">
