added with header resize css

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         display: flex !important;
         align-items: center;
         justify-content: space-between !important;
-        /* gap: 50%; */
+        gap: 50%;
         /* width: 100% !important; */
       }
       
