--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="container-fluid w-100 d-flex flex-column justify-content-between align-items-center p-0 menu"
             id="custom_responsive_navbar">
             <div class="w-50 w-100" id="custom_responsive_accordion_parent">
-              <!-- <div class="accordion accordion-flush" id="accordionFlushExample">
+              <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item border-bottom-0">
                   <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -112,7 +112,7 @@
                   </div>
                 </div>
                   <a class="nav-link admin">Admin console</a>
-              </div> -->
+              </div>
             </div>
             <div class="w-50 bg-gradient w-100 row pe-3 ps-3 pt-4 border-top"
               style="box-shadow: 0 10px 17px 0px #3f3f3f">
@@ -328,15 +328,15 @@
   </div>
   <div class="container-fluid bg-white chatWindow_position ps-0 pe-0 pb-0 mb-0" id="chatBox">
     <header class="d-flex justify-content-center w-100">
-        <svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-          <g fill="none" fill-rule="evenodd">
-            <circle cx="24" cy="24" r="24"></circle>
-            <path d="M12 12h24v24H12z"></path>
-            <path
-              d="M32 14H16c-1.1 0-1.99.9-1.99 2L14 34l4-4h14c1.1 0 2-.9 2-2V16c0-1.1-.9-2-2-2zm0 14H16V16h16v12zm-14-4h8v2h-8v-2zm0-3h12v2H18v-2zm0-3h12v2H18v-2z"
-              fill="#FFF" fill-rule="nonzero"></path>
-          </g>
-        </svg>
+      <svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+        <g fill="none" fill-rule="evenodd">
+          <circle cx="24" cy="24" r="24"></circle>
+          <path d="M12 12h24v24H12z"></path>
+          <path
+            d="M32 14H16c-1.1 0-1.99.9-1.99 2L14 34l4-4h14c1.1 0 2-.9 2-2V16c0-1.1-.9-2-2-2zm0 14H16V16h16v12zm-14-4h8v2h-8v-2zm0-3h12v2H18v-2zm0-3h12v2H18v-2z"
+            fill="#FFF" fill-rule="nonzero"></path>
+        </g>
+      </svg>
       <div class="icon-close mt-2 me-3" id="trying" onclick="toggle_chat()">
         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="24" viewBox="0 0 24 24">
           <path d="M0 10h18v4h-24z" fill="#fff"></path>
@@ -437,7 +437,16 @@
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script>
   const expandAll = () => {
-    let expandEvents = document.getElementsByClassName("accordion-item");
+    let expand = document.getElementById("accordionPanelsStayOpenExample").childNodes
+    console.log("test", expand);
+    let expandEvents = []
+    for (let i in expand) {
+      console.log(i);
+      if (i % 2 !== 0) {
+        expandEvents.push(expand[i])
+      }
+    }
+    // let expandEvents = document.getElementsByClassName("accordion-item");
     console.log("expand", expandEvents);
     // let expandButtons = document.getElementsByClassName("accordion-button");
     // for (let i of expandEvents) {
@@ -477,7 +486,6 @@
 
     if (document.getElementById("expand_all").innerHTML === "Expand all") {
       for (let i of expandEvents) {
-        console.log("i",i.childNodes[3]);
         let tempExpand = i.childNodes[3].classList;
         let tempButton = i.childNodes[1].firstChild.nextSibling.classList;
         let tempAria = i.childNodes[1].firstChild.nextSibling.ariaExpanded;
@@ -488,7 +496,6 @@
       }
     } else {
       for (let i of expandEvents) {
-        console.log("i", i.childNodes[3]);
         let tempExpand = i.childNodes[3].classList;
         let tempButton = i.childNodes[1].firstChild.nextSibling.classList;
         let tempAria = i.childNodes[1].firstChild.nextSibling.ariaExpanded;
