added with neste accorion

--- a/index.html
+++ b/index.html
@@ -42,9 +42,67 @@
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                      demonstrate the
-                      <code>.accordion-flush</code> class. This is the first item's accordion body.
+                    <div class="accordion-body">
+                      <div class="accordion accordion-flush" id="accordionFlushExamplee">
+                        <div class="accordion-item border-bottom-0">
+                          <h2 class="accordion-header" id="flush-headingFive">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                              data-bs-target="#flush-collapseFive" aria-expanded="false"
+                              aria-controls="flush-collapseFive">
+                              For business
+                            </button>
+                          </h2>
+                          <div id="flush-collapseFive" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExamplee">
+                            <div class="accordion-body ms-4">
+                              <p>Overview</p>
+                              <p>Small business</p>
+                              <p>New business</p>
+                              <p>Start-ups</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item border-bottom-0">
+                          <h2 class="accordion-header" id="flush-headingSix">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                              data-bs-target="#flush-collapseSix" aria-expanded="false"
+                              aria-controls="flush-collapseTwo">
+                              For enterprise
+                            </button>
+                          </h2>
+                          <div id="flush-collapseSix" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExamplee">
+                            <div class="accordion-body ms-4">
+                              <p>Overview</p>
+                              <p>Frontline workers</p>
+                              <p>Work safer</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="nested-accordion-plain-text container m-0 p-0">
+                          <div class="accordion-item border-bottom-0" id="pricing_parent_responisve">
+                            <h2 class="accordion-header">
+                              <button class="accordion-button border-bottom-0" id="pricing_responsive">
+                                Developers
+                              </button>
+                            </h2>
+                          </div>
+                          <div class="accordion-item border-bottom-0" id="pricing_parent_responisve">
+                            <h2 class="accordion-header">
+                              <button class="accordion-button border-bottom-0" id="pricing_responsive">
+                                Education
+                              </button>
+                            </h2>
+                          </div>
+                          <div class="accordion-item border-bottom-0" id="pricing_parent_responisve">
+                            <h2 class="accordion-header">
+                              <button class="accordion-button border-bottom-0" id="pricing_responsive">
+                                Nonprofits
+                              </button>
+                            </h2>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -57,12 +115,44 @@
                   </h2>
                   <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                      demonstrate the
-                      <code>.accordion-flush</code> class. This is the second item's accordion body. Let's
-                      imagine
-                      this being
-                      filled with some actual content.
+                    <div class="accordion-body ms-4">
+                      <p><span><img class="product-image-res me-3"
+                            src="https://www.gstatic.com/images/branding/product/2x/hh_gmail_32dp.png" alt="" /></span>
+                        Gmail</p>
+                      <p><span><img class="product-image-res me-3"
+                            src="https://www.gstatic.com/images/branding/product/2x/hh_calendar_32dp.png"
+                            alt="" /></span> Calendar
+                      </p>
+                      <p> <span><img class="product-image-res me-3"
+                            src="https://www.gstatic.com/images/branding/product/2x/hh_drive_32dp.png" alt="" /></span>
+                        Drive</p>
+                      <p><span><img class="product-image-res me-3"
+                            src="https://www.gstatic.com/images/branding/product/2x/hh_meet_32dp.png" alt="" /></span>
+                        Meet</p>
+                      <div class="accordion accordion-flush" id="accordionFlushExampleeeee">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingTwelve">
+                            <button class="accordion-button collapsed ps-0 pt-0 mt-4  " type="button"
+                              data-bs-toggle="collapse" data-bs-target="#flush-collapseTwelve" aria-expanded="false"
+                              aria-controls="flush-collapseTwelve">
+                              See more
+                            </button>
+                          </h2>
+                          <div id="flush-collapseTwelve" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingTwelve" data-bs-parent="#accordionFlushExampleeeee">
+                            <div class="accordion-body ps-0 pt-0">
+                              <p>Docs</p>
+                              <p>Sheets</p>
+                              <p>Slides</p>
+                              <p>Chat</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="nested-accordion-plain-text">
+                        <p>Admin console</p>
+                        <p>Add-ons</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -75,15 +165,50 @@
                   </h2>
                   <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                      demonstrate the
-                      <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
-                      more
-                      exciting
-                      happening here in terms of content, but just filling up the space to make it look, at
-                      least
-                      at first
-                      glance, a bit more representative of how this would look in a real-world application.
+                    <div class="accordion-body">
+                      <div class="accordion accordion-flush" id="accordionFlushExampleee">
+                        <div class="accordion-item border-bottom-0">
+                          <h2 class="accordion-header" id="flush-headingSeven">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                              data-bs-target="#flush-collapseSeven" aria-expanded="false"
+                              aria-controls="flush-collapseOne">
+                              Industries
+                            </button>
+                          </h2>
+                          <div id="flush-collapseSeven" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExampleee">
+                            <div class="accordion-body ms-4">
+                              <p>Healthcare and life sciences</p>
+                              <p>Retail</p>
+                              <p>Manufacturing</p>
+                              <p>Government and Public sector</p>
+                              <p>Professional services</p>
+                              <p>Technology</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item border-bottom-0">
+                          <h2 class="accordion-header" id="flush-headingEight">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                              data-bs-target="#flush-collapseEight" aria-expanded="false"
+                              aria-controls="flush-collapseTwo">
+                              Departments
+                            </button>
+                          </h2>
+                          <div id="flush-collapseEight" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingEight" data-bs-parent="#accordionFlushExampleee">
+                            <div class="accordion-body ms-4">
+                              <p>Sales</p>
+                              <p>Marketing</p>
+                              <p>Human Resources</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="nested-accordion-plain-text">
+                          <p>Security</p>
+                          <p>The future of work</p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -103,15 +228,69 @@
                   </h2>
                   <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                      demonstrate the
-                      <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
-                      more
-                      exciting
-                      happening here in terms of content, but just filling up the space to make it look, at
-                      least
-                      at first
-                      glance, a bit more representative of how this would look in a real-world application.
+                    <div class="accordion-body">
+                      <div class="accordion accordion-flush" id="accordionFlushExampleeee">
+                        <div class="accordion-item border-bottom-0">
+                          <h2 class="accordion-header" id="flush-headingNine">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                              data-bs-target="#flush-collapseNine" aria-expanded="false"
+                              aria-controls="flush-collapseNine">
+                              Discover
+                            </button>
+                          </h2>
+                          <div id="flush-collapseNine" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingNine" data-bs-parent="#accordionFlushExampleeee">
+                            <div class="accordion-body ms-4">
+                              <p>Security</p>
+                              <p>The future of work</p>
+                              <p>Working remotely</p>
+                              <p>Customer stories</p>
+                              <p>Blog</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item border-bottom-0">
+                          <h2 class="accordion-header" id="flush-headingTen">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                              data-bs-target="#flush-collapseTen" aria-expanded="false"
+                              aria-controls="flush-collapseTen">
+                              Learn
+                            </button>
+                          </h2>
+                          <div id="flush-collapseTen" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingTen" data-bs-parent="#accordionFlushExampleeee">
+                            <div class="accordion-body ms-4">
+                              <p>Product demo</p>
+                              <p>FAQs</p>
+                              <p>Training and certification</p>
+                              <p>Live and on-demand events</p>
+                              <p>Video conferencing</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item border-bottom-0">
+                          <h2 class="accordion-header" id="flush-headingEleven">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                              data-bs-target="#flush-collapseEleven" aria-expanded="false"
+                              aria-controls="flush-collapseEleven">
+                              Connect
+                            </button>
+                          </h2>
+                          <div id="flush-collapseEleven" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingEleven" data-bs-parent="#accordionFlushExampleeee">
+                            <div class="accordion-body ms-4">
+                              <p>Partners</p>
+                              <p>Marketplace</p>
+                              <p>Integrations</p>
+                              <p>Refer Google Workspace</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="nested-accordion-plain-text">
+                          <p>Support for admins</p>
+                          <p>Support for users</p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -576,18 +755,17 @@
   }
 
   const handleEditMessage = (event, id) => {
-    // console.log("called");
-    // console.log("event id", id);
     console.log("edtiting element", document.getElementById(id).innerText)
     let editMessage = document.getElementById(id).innerText;
     let index = editMessage.lastIndexOf("\n");
-    let temp = editMessage.slice(0, index);
+    let temp = editMessage.slice(0, index - 1);
     console.log("final temp", temp, index)
     let inputMessage = document.getElementById("inputMessage");
-    inputMessage.focus()
+    inputMessage.focus();
     // console.log("editmessage", editMessage);
     inputMessage.value = temp;
     editingId = id;
+    inputMessage.scrollTo(0, document.getElementById("inputMessage").scrollHeight)
     // console.log("edit", editingId)
   }
 
